--- a/contracts/dao/Cargo.toml
+++ b/contracts/dao/Cargo.toml
@@ -10,7 +10,9 @@ ink = { version = "4.2.1", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }
 
-openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "3.1.1", default-features = false }
+openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "4.0.0-beta", default-features = false }
+
+governance_token = { path = "../governance-token", default-features = false, features = ["ink-as-dependency"] }
 
 [lib]
 path = "lib.rs"
@@ -22,6 +24,7 @@ std = [
     "scale/std",
     "scale-info/std",
     "openbrush/std",
+    "governance_token/std",
 ]
 ink-as-dependency = []
 
